# ketoevent

./: .gitattributes  .gitignore  CMakeLists.txt  KetoEvent3.pro  Makefile  README.md  about.cpp  about.h  about.ui  addedit.cpp  addedit.h  addedit.ui  app_logparser.cpp  app_main.cpp  app_main.h  app_taskparser.cpp  app_taskparser.h  app_teamentry.h  callonce.h  cmd.cpp  cmd.h  combo.cpp  combo.h  combobox.h  combodialog.cpp  combodialog.h  combodialog.ui  combomodel.cpp  combomodel.h  combos.cpp  combos.h  combos.ui  common.cpp  common.h  console.cpp  console.h  console.ui  consolevariable.h  dark.qrc  database.cpp  (+189 more)
android/: AndroidManifest.xml  local.properties
base/: tasks.xml
i18n/: KetoEvent_lv_LV.ts  ketoevent_lv_LV.qm  ketoevent_lv_LV.ts
icons/: .directory
icons/dark/: index.theme
icons/light/: index.theme
scripts/: default.js
themes/: dark.theme  light.theme
trunk/: CHANGELOG  KetoEvent2.pro  KetoEvent3.pro  app_logparser.h  app_taskentry.cpp  app_taskentry.h  app_tasklog.cpp  app_tasklog.h  app_teamentry.cpp  cmd.cpp  cmd.h  combo.cpp  consolevariable.h  database.cpp  databaseentry.cpp  databaseentry.h  event.cpp  evententry.cpp  evententry.h  gui_about.cpp  gui_about.h  gui_about.ui  gui_addedit.cpp  gui_addedit.h  gui_addedit.ui  gui_addevent.cpp  gui_combomodel.cpp  gui_combomodel.h  gui_combos.cpp  gui_combos.h  gui_combos.ui  gui_console.cpp  gui_console.h  gui_event.cpp  gui_event.h  gui_event.ui  gui_license.cpp  gui_license.h  gui_license.ui  gui_main.cpp  (+52 more)
trunk/android/: AndroidManifest.xml  build.xml
trunk/i18n/: KetoEvent_lv_LV.qm  (+2 more)
(+2 files in other folders)
